WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51735
Web Inspector: another problem with slowness of Inspector's tests at Chromium
https://bugs.webkit.org/show_bug.cgi?id=51735
Summary
Web Inspector: another problem with slowness of Inspector's tests at Chromium
Ilya Tikhonovsky
Reported
2010-12-30 01:18:41 PST
Inspector's tests very slow at Chromium Win Dbg. Patch to follow.
Attachments
[patch] initial version
(2.62 KB, patch)
2010-12-30 01:22 PST
,
Ilya Tikhonovsky
pfeldman
: review+
Details
Formatted Diff
Diff
[patch] second version
(3.90 KB, patch)
2010-12-30 08:04 PST
,
Ilya Tikhonovsky
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ilya Tikhonovsky
Comment 1
2010-12-30 01:22:45 PST
Created
attachment 77664
[details]
[patch] initial version It was a problem with Chromium DRT. DevToolsAgent object instance was attached not only to the inspected page but to the DevTools window too. As result all the inspector files were interpreted as a content of inspected page and were transfered to the DevTools scripts panel for debugging etc.
Pavel Feldman
Comment 2
2010-12-30 04:54:03 PST
Comment on
attachment 77664
[details]
[patch] initial version Please put a comment explaining that inspected web view is not changed throughout the drt lifetime.
Ilya Tikhonovsky
Comment 3
2010-12-30 08:04:34 PST
Created
attachment 77680
[details]
[patch] second version
WebKit Review Bot
Comment 4
2010-12-30 08:06:45 PST
Attachment 77680
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Tools/ChangeLog', u'Tools/DumpRenderTree/chromium/TestShell.cpp', u'Tools/DumpRenderTree/chromium/TestShell.h', u'Tools/DumpRenderTree/chromium/WebViewHost.cpp']" exit_code: 1 Tools/DumpRenderTree/chromium/TestShell.h:170: The parameter name "devToolsAgent" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Pavel Feldman
Comment 5
2010-12-31 03:37:02 PST
Comment on
attachment 77680
[details]
[patch] second version View in context:
https://bugs.webkit.org/attachment.cgi?id=77680&action=review
> Tools/DumpRenderTree/chromium/TestShell.cpp:570 > +WebViewHost* TestShell::createNewWindow(const WebKit::WebURL& url, DRTDevToolsAgent* devToolsAgent)
Nit: It would be great if there was no way to create non-main web views with existing devtools agent.
Ilya Tikhonovsky
Comment 6
2010-12-31 03:42:05 PST
Comment on
attachment 77680
[details]
[patch] second version Clearing flags on attachment: 77680 Committed
r74826
: <
http://trac.webkit.org/changeset/74826
>
Ilya Tikhonovsky
Comment 7
2010-12-31 03:42:17 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug