2010-12-31  Ilya Tikhonovsky  <loislo@chromium.org>

Reviewed by Pavel Feldman.

        Web Inspector: [Chromium] Inspector's tests are very slow on Win(Dbg).

        It was a problem with Chromium DRT. DevToolsAgent object instance was
        attached not only to the inspected page but to the DevTools window too.
        As result all the inspector files were interpreted as a content of inspected page
        and were transfered to the DevTools scripts panel for debugging etc.

        https://bugs.webkit.org/show_bug.cgi?id=51735

        * DumpRenderTree/chromium/TestShell.cpp:
        (TestShell::TestShell):
        (TestShell::bindJSObjectsToWindow):
        (TestShell::createNewWindow):
        * DumpRenderTree/chromium/TestShell.h:

Canonical link: https://commits.webkit.org/65165@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74826 268f45cc-cd09-0410-ab3c-d52691b4dbfc